--- a/hs-gip.cabal
+++ b/hs-gip.cabal
@@ -20,4 +20,6 @@ executable hs-gip
                        text >= 1.2.1.3 && < 1.2.2.0,
                        scotty >= 0.10.2 && < 0.11.0,
                        wai >= 3.0.4 && < 3.1.0,
-                       network >= 2.6.2.1 && < 2.6.3.0
+                       http-types >= 0.8.6 && < 0.9,
+                       case-insensitive >= 1.2.0.5 && < 1.2.1.0,
+                       bytestring >= 0.10.6.0 && < 0.10.7.0
